# P2P

./: Dockerfile  README.md  async_client.py  async_server.py  client.py  docker-compose.yml  install.sh  launcher.py  message_api.py  openai.py  pyproject.toml  pytest.ini  requirements.txt  services.pid  setup.py  start_p2p_chat.sh  stop_p2p_chat.sh  test_chat_app.py  thermometer.py  websocket_adapter.py
.github/workflows/: pytest.yml  python-tests.yml
dummy_server_client/: server.py
logs/: mongodb.log.2025-04-17T21-47-27
src/p2p_chat/: __init__.py  client.py  message_api.py  server.py  web_server.py  websocket_adapter.py  websocket_bridge.py
src/p2p_chat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/p2p_chat/frontend/: App.css  App.js  index.html
src/p2p_chat/services/: __init__.py  thermometer.py
src/tests/: test_chat_app.py
static/: index.html
